--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mocha": "^3.1.2"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "boiyaa/eslint-plugin-no-return"
 }
